# jumper-analytics-assignment

./: README.md  index.html  pyproject.toml
api/: main.py
api/static/: dashboard.html
src/: data_generator.py
